Edurex Icon Changed

--- a/client/edurex-ui/src/app/components/navbar/navbar.component.html
+++ b/client/edurex-ui/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar color="primary" class="navbar">
     <mat-toolbar-row>
-      <span>Edurex</span>
+      
+      <span><img src="assets/images/Edurex.png" height="40" width="40"> Edurex</span>
       <span class="example-spacer"></span>
       <span>
         <mat-slide-toggle (click)="$event.stopPropagation();toggleDarkMode()" style="margin-right: 1rem; font-size: 11px;">
