Library Add an Display Books done

--- a/client/edurex-ui/src/app/components/navbar/navbar.component.html
+++ b/client/edurex-ui/src/app/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
       <mat-menu #settings="matMenu">
         <button mat-menu-item [matMenuTriggerFor]="theme"
         matTooltip="Select a theme!" > <mat-icon class="auto-flip">format_color_fill</mat-icon> Theme</button>
-  
+        <button mat-menu-item matToolTip = "Configure Counter"><mat-icon class="auto-flip">scatter_plot</mat-icon>Counter</button>
       </mat-menu>
       
       <mat-menu #theme="matMenu">
